resolved spacing issues under projects, links

--- a/projects.html
+++ b/projects.html
@@ -109,38 +109,45 @@
             <div class="card mx-auto" style="width: 18rem;">
                 <div class="card-body">
                     <h5 class="card-title">Projects:</h5>
-                    <ul>
-                        <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/timer/';"><i
-                                    class="fas fa-stopwatch"></i> Countdown to Doom! (timer)</button></li>
+                
+                    <button class="btn" onclick="window.location.href='https://mgaren01.github.io/timer/';"><i
+                                    class="fas fa-stopwatch"></i> Countdown to Doom! (timer)</button>
                         <br>
-                        <li><button class="btn"
+                        <br>
+                    <button class="btn"
                                 onclick="window.location.href='https://mgaren01.github.io/digitalclock/';"><i
-                                    class="fas fa-clock"></i> Clock</button></li>
+                                    class="fas fa-clock"></i> Clock</button>
                         <br>
-                        <li><button class="btn" onclick="window.location.href='https://mgaren01.github.io/gallery/';"><i
+                        <br>
+                    <button class="btn" onclick="window.location.href='https://mgaren01.github.io/gallery/';"><i
                                     class="fas fa-paint-brush"></i> Gallery (with bonus image!)</button></li>
                         <br>
-                        <li><button class="btn"
+                        <br>
+                    <button class="btn"
                                 onclick="window.location.href='https://mgaren01.github.io/splash-page/';"><i
-                                    class="fab fa-firefox"></i> Splash Page</button></li>
+                                    class="fab fa-firefox"></i> Splash Page</button>
                         <br>
-                        <li><button class="btn"
+                        <br>
+                    <button class="btn"
                                 onclick="window.location.href='https://mgaren01.github.io/silly-story/';"><i
-                                    class="fas fa-book"></i> Silly Story Generator (with bonus content!)</button></li>
+                                    class="fas fa-book"></i> Silly Story Generator (with bonus content!)</button>
                         <br>
-                        <li><button class="btn"
+                        <br>
+                    <button class="btn"
                                 onclick="window.location.href='https://mgaren01.github.io/structure-asst./';"><i
-                                    class="far fa-building"></i> Structure (bugged)</button></li>
+                                    class="far fa-building"></i> Structure (bugged)</button>
                         <br>
-                        <li><button class="btn"
+                        <br>
+                    <button class="btn"
                                 onclick="window.location.href='https://github.com/mgaren01/pseudocode/blob/master/pseudocode.md';"><i
-                                    class="fas fa-project-diagram"></i> Pseudocode</button></li>
+                                    class="fas fa-project-diagram"></i> Pseudocode</button>
                         <br>
-                        <li><button class="btn"
+                        <br>
+                    <button class="btn"
                                 onclick="window.location.href='https://mgaren01.github.io/markup-asst./';"><i
-                                    class="fas fa-highlighter"></i> Markup</button></li>
+                                    class="fas fa-highlighter"></i> Markup</button>
 
-                    </ul>
+                    
                 </div>
             </div>
             <br>
