--- a/links.html
+++ b/links.html
@@ -108,15 +108,18 @@
             <div class="card mx-auto" style="width: 18rem;">
                 <div class="card-body text-center">
                     <h5 class="card-title">Find me at these fine places:</h5>
-                    <ul>
-                        <li><button class="btn" onclick="window.location.href='https://github.com/mgaren01';"><i class="fab fa-github-square"></i> Github</button></li>
+                    
+                        <button class="btn" onclick="window.location.href='https://github.com/mgaren01';"><i class="fab fa-github-square"></i> Github</button>
                         <br>
-                        <li><button class="btn" onclick="window.location.href='https://www.linkedin.com/in/michael-garen-967b44aa/?trk=people-guest_people_search-card';"><i class="fab fa-linkedin"></i> linkedIn</button></li>
                         <br>
-                        <li><button class="btn" onclick="window.location.href='https://www.codewars.com/users/mgaren01';"><i class="fas fa-exclamation-circle"></i> Codewars</button></li>
+                        <button class="btn" onclick="window.location.href='https://www.linkedin.com/in/michael-garen-967b44aa/?trk=people-guest_people_search-card';"><i class="fab fa-linkedin"></i> linkedIn</button>
                         <br>
-                        <li><button class="btn" onclick="window.location.href='https://sovereignstudio.wordpress.com/';"><i class="fas fa-crown"></i> Sovereign Studio (art!)</button></li>
-                    </ul>
+                        <br>
+                        <button class="btn" onclick="window.location.href='https://www.codewars.com/users/mgaren01';"><i class="fas fa-exclamation-circle"></i> Codewars</button>
+                        <br>
+                        <br>
+                        <button class="btn" onclick="window.location.href='https://sovereignstudio.wordpress.com/';"><i class="fas fa-crown"></i> Sovereign Studio (art!)</button>
+                    
                 </div>
             </div>
             <br>
