fixed icon sizing in footer

--- a/posts.html
+++ b/posts.html
@@ -158,10 +158,10 @@
     </div>
         <footer>
             <ul class="mt-2">
-                <li><button class="btn"><i class="fab fa-github-square"></i></button></li>
-                <li><button class="btn"><i class="fab fa-linkedin"></i></button></li>
-                <li><button class="btn"><i class="fas fa-exclamation-circle"></i></button></li>
-                <li><button class="btn"><i class="fas fa-crown"></i></button></li>
+                <li><button class="btn"><i class="fab fa-github-square fa-2x"></i></button></li>
+                <li><button class="btn"><i class="fab fa-linkedin fa-2x"></i></button></li>
+                <li><button class="btn"><i class="fas fa-exclamation-circle fa-2x"></i></button></li>
+                <li><button class="btn"><i class="fas fa-crown fa-2x"></i></button></li>
             </ul>
         </footer>
 
