added sixth post, linked in posts page

--- a/blogtext/text6.html
+++ b/blogtext/text6.html
@@ -76,7 +76,16 @@
         <div class="maintext">
             <h2>Week Six</h2>
             <br>
-            <p>
+            <p>What a week.  Between struggles with projects and feelings of failure and 
+                incompetence, this was probably the roughest one yet, for me.  There is a
+                silver lining to the hardship, however.  As the material becomes more 
+                challenging, it's forced me to think of the class writ large in different 
+                terms, and reevaluate what expectations for myself are realistic.  <br>
+                I started to realize that the expectations I had of myself were in the first 
+                place not reflective of reality, and second, that nobody else held me to 
+                such a high standard.  That's something I've struggled with a lot over the 
+                last several years, and I hope to keep it well in mind in the coming weeks.<br>
+                I think that about does it, so I guess this will be a short one.  Until next.
             </p>
         </div>
     </div>
