--- a/posts.html
+++ b/posts.html
@@ -148,8 +148,8 @@
                 <div class="card mx-auto" style="width: 18rem;">
                     <div class="card-body">
                         <h5 class="card-title">Week Six</h5>
-                        <p class="card-text">Error 404: Future not found.</p>
-                        <a href="#" class="btn btn-primary">Go</a>
+                        <p class="card-text">Dark Cloud, Silver Lining</p>
+                        <a href="blogtext/text6.html" class="btn btn-primary">Go</a>
                     </div>
                 </div>
             </div>
