--- a/posts.html
+++ b/posts.html
@@ -126,6 +126,14 @@
                         <a href="blogtext/text5.html" class="btn btn-primary">Go</a>
                     </div>
                 </div>
+                <br>
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Seven</h5>
+                        <p class="card-text">Uphill Climb</p>
+                        <a href="blogtext/text7.html" class="btn btn-primary">Go</a>
+                    </div>
+                </div>
             </div>
 
             <div class="col-6 text-center">
