--- a/posts.html
+++ b/posts.html
@@ -160,6 +160,14 @@
                         <a href="blogtext/text6.html" class="btn btn-primary">Go</a>
                     </div>
                 </div>
+                <br>
+                <div class="card mx-auto" style="width: 18rem;">
+                    <div class="card-body">
+                        <h5 class="card-title">Week Eight</h5>
+                        <p class="card-text">Long Walk, Short Drink</p>
+                        <a href="blogtext/text6.html" class="btn btn-primary">Go</a>
+                    </div>
+                </div>
             </div>
         </div>
         <br>
